--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: ServiceNow
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -14,7 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: ServiceNow CI/CD
+    name: CI/CD
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
